---------------------------------------------------------------------------
Version 3.12.2 (rgerhards), 2008-03-??
- added RSYSLOGD_MODDIR environment variable
- added -M rsyslogd option (allows to specify module directory location)
- converted net.c into a loadable library plugin
- bugfix: debug module now survives unload of loadable module when
  printing out function call data
---------------------------------------------------------------------------
Version 3.12.1 (rgerhards), 2008-03-06
- added library plugins, which can be automatically loaded
- bugfix: actions were not correctly retried; caused message loss
- changed module loader to automatically add ".so" suffix if not
  specified (over time, this shall also ease portability of config
  files)
- improved debugging support; debug runtime options can now be set via
  an environment variable
- bugfix: removed debugging code that I forgot to remove before releasing
  3.12.0 (does not cause harm and happened only during startup)
- added support for the MonitorWare syslog MIB to omsnmp
- internal code improvements (more code converted into classes)
- internal code reworking of the imtcp/imgssapi module
- added capability to ignore client-provided timestamp on unix sockets and
  made this mode the default; this was needed, as some programs (e.g. sshd)
  log with inconsistent timezone information, what messes up the local
  logs (which by default don't even contain time zone information). This
  seems to be consistent with what sysklogd did for the past four years.
  Alternate behaviour may be desirable if gateway-like processes send
  messages via the local log slot - in this case, it can be enabled
  via the $InputUnixListenSocketIgnoreMsgTimestamp and
  $SystemLogSocketIgnoreMsgTimestamp config directives
- added ability to compile on HP UX; verified that imudp worked on HP UX;
  however, we are still in need of people trying out rsyslogd on HP UX,
  so it can not yet be assumed it runs there